--- a/src/styles/sections/_week.scss
+++ b/src/styles/sections/_week.scss
@@ -24,7 +24,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0.75em 0;
+    margin: 0.75em 1em;
 
     .forecast-date {
       width: 33.33%;
